--- a/src/pages/Projects/index.css
+++ b/src/pages/Projects/index.css
@@ -3,8 +3,8 @@
     justify-content: space-evenly;
     align-items: center;
     flex-wrap: wrap;
-    padding:30px;
     gap:4em;
+    /* overflow-y: hidden; */
 }
 
 .page-title{
@@ -14,6 +14,8 @@
     background-color: black;
     color:var(--dominant-colour);
     padding: 0;
+    margin-bottom:5em;
+    
 }
 
 .page-title h1{
@@ -35,7 +37,7 @@
         justify-content: center;
         align-items: center;
         flex-wrap: wrap;
-        padding:20px;
+        padding:2.5em;
         /* gap:4em; */
     }
     
